--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="subtitle"><a href=""></a> (<a href="mailto:gaoxin@shanghaitech.edu.cn">gaoxin@shanghaitech.edu.cn</a>)</div>
 </div>
 <table class="imgtable"><tr><td>
-<a href="IMGLINKTARGET"><img src="meX.JPG" alt="alt text" width="180px" height="HEIGHTpx" /></a>&nbsp;</td>
+<a href="IMGLINKTARGET"><img src="meX.jpg" alt="alt text" width="180px" height="HEIGHTpx" /></a>&nbsp;</td>
 <td align="left"></td></tr></table>
 <p><br />
 Welcome to my homepage, I am a student in the <a href="http://sist.shanghaitech.edu.cn/">School of Information Science and Technology</a>@ ShanghaiTech University. My advisor is Professor Ziyu Shao. </p>
@@ -33,7 +33,7 @@ Welcome to my homepage, I am a student in the <a href="http://sist.shanghaitech.
 Email: <a href="mailto:gaoxin@shanghaitech.edu.cn">gaoxin@shanghaitech.edu.cn</a> or <a href="mailto:gaoxin.sydne@gmail.com">gaoxin.sydne@gmail.com</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2016-02-28 19:34:42 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2016-02-28 19:37:41 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
