--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>Xin Gao</h1>
-<div id="subtitle"><a href=""></a> (<a href="mailto:gaoxin@shanghaitech.edu.cn">gaoxin@shanghaitech.edu.cn</a>)</div>
+<div id="subtitle"><a href="http://sist.shanghaitech.edu.cn/index.asp">School of Information Science and Technology (SIST)</a></div>
 </div>
 <table class="imgtable"><tr><td>
 <a href="IMGLINKTARGET"><img src="meX.jpg" alt="alt text" width="180px" height="HEIGHTpx" /></a>&nbsp;</td>
 <td align="left"></td></tr></table>
 <p><br />
-Welcome to my homepage, I am a student in the <a href="http://sist.shanghaitech.edu.cn/">School of Information Science and Technology</a>@ ShanghaiTech University. My advisor is Professor Ziyu Shao. </p>
+Welcome to my homepage, I am a student in the <a href="http://sist.shanghaitech.edu.cn/">School of Information Science and Technology</a> at ShanghaiTech University. My advisor is Professor Ziyu Shao. </p>
 <p>Before I went to ShanghaiTech, I received the B.E. degree in Huazhong University of Science and Technology. </p>
 <h2>Research Interests</h2>
-<p>My research centers on network optimization in data center networks. My current topic is to develope online algorithms for choosing wireless links in data center networks to eliminate hotspots. </p>
+<p>My research centers on network optimization in data center networks. My current topic is to develop online algorithms for choosing wireless links in data center networks to eliminate hotspots. </p>
 <p>I am looking forward to discussing with people who are interested or have been working on network optimization. Please contact me if you want to change ideas and discuss with me. </p>
 <h2>Contact</h2>
 <p>Xin Gao <br />
 Email: <a href="mailto:gaoxin@shanghaitech.edu.cn">gaoxin@shanghaitech.edu.cn</a> or <a href="mailto:gaoxin.sydne@gmail.com">gaoxin.sydne@gmail.com</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2016-02-28 19:37:41 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2016-02-28 19:49:28 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
