spelling error corrected

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@ Welcome to my homepage, I am a student in the <a href="http://sist.shanghaitech.
 <p>Before I went to ShanghaiTech, I received the B.E. degree in Huazhong University of Science and Technology. </p>
 <h2>Research Interests</h2>
 <p>My research centers on network optimization in data center networks. My current topic is to develop online algorithms for choosing wireless links in data center networks to eliminate hotspots. </p>
-<p>I am looking forward to discussing with people who are interested or have been working on network optimization. Please contact me if you want to change ideas and discuss with me. </p>
+<p>I am looking forward to discussing with people who are interested or have been working on network optimization. Please contact me if you want to exchange ideas and discuss with me. </p>
 <h2>Contact</h2>
 <p>Xin Gao <br />
 Email: <a href="mailto:gaoxin@shanghaitech.edu.cn">gaoxin@shanghaitech.edu.cn</a> or <a href="mailto:gaoxin.sydne@gmail.com">gaoxin.sydne@gmail.com</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2016-02-28 19:53:40 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2016-02-28 20:50:27 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
