--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 <a href="IMGLINKTARGET"><img src="meX.jpg" alt="alt text" width="180px" height="HEIGHTpx" /></a>&nbsp;</td>
 <td align="left"></td></tr></table>
 <p><br />
-Welcome to my homepage, I am a student in the <a href="http://sist.shanghaitech.edu.cn/">School of Information Science and Technology</a> at ShanghaiTech University. My advisor is Professor Ziyu Shao. </p>
+Welcome to my homepage, I am a student in the <a href="http://sist.shanghaitech.edu.cn/">School of Information Science and Technology</a> at ShanghaiTech University. My advisor is Professor Ziyu Shao, and my co-advisor is Professor Jie Lu.</p>
 <p>Before I went to ShanghaiTech, I received the B.E. degree in Huazhong University of Science and Technology. </p>
 <h2>Research Interests</h2>
-<p>My research centers on network optimization in data center networks. My current topic is to develop online algorithms for choosing wireless links in data center networks to eliminate hotspots. </p>
-<p>I am looking forward to discussing with people who are interested or have been working on network optimization. Please contact me if you want to exchange ideas and discuss with me. </p>
+<p>My research centers on distributed convex optimization. My current topic is perturbation analysis and algorithm designing of distributed convex optimization. </p>
+<p>I am looking forward to discussing with people who are interested or have been working on optimization and control. Please contact me if you want to exchange ideas and discuss with me. </p>
 <h2>Contact</h2>
 <p>Xin Gao <br />
 Email: <a href="mailto:gaoxin@shanghaitech.edu.cn">gaoxin@shanghaitech.edu.cn</a> or <a href="mailto:gaoxin.sydne@gmail.com">gaoxin.sydne@gmail.com</a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2016-02-28 20:50:27 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2016-11-04 23:45:26 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
